# agetic_workflow_auditor

./: .gitignore  CLAUDE.md  OUTPUT_CONFIGURATION.md  README.md  pyproject.toml  simple_md_to_pdf.py
Backup/: agents.yaml  tasks.yaml
docs/: QUICK_START_PDF_TOOL.md  TOOL_INTEGRATION_SUMMARY.md  markdown_to_pdf_tool.md  workflow_flowchart.md
evaluation/: sample_payload.json
src/internal_audit_validation_system/: crew.py  main.py
src/internal_audit_validation_system/config/: agents.yaml  tasks.yaml
src/internal_audit_validation_system/evaluation/: __init__.py  criteria.py  runner.py
src/internal_audit_validation_system/tools/: custom_tool.py
tests/: test_evaluation_checks.py
