[project]
name = "internal_audit_validation_system"
version = "0.1.0"
description = "internal_audit_validation_system using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.0,<1.0.0",
    "PyPDF2>=3.0.0",
    "requests>=2.31.0"
]

[project.scripts]
internal_audit_validation_system = "internal_audit_validation_system.main:run"
run_crew = "internal_audit_validation_system.main:run"
train = "internal_audit_validation_system.main:train"
replay = "internal_audit_validation_system.main:replay"
test = "internal_audit_validation_system.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
